--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
+    "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
     "postgres": "^3.4.5",
