--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
     "postgres": "^3.4.5",
